por ahora el diseño lo voy a dejar aqui, voy a por el javascript

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="form-button">
           <dialog>
             <div class="button-area">
-              <button autofocus>Close</button>
+              <button autofocus>X</button>
             </div>
             <form onsubmit="return false">
               <ul>
