--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
                 <li>
                   <label for="title">Title</label>
                   <br />
-                  <input type="text" name="title" id="title" />
+                  <input type="text" name="title" id="title" required />
                 </li>
                 <li>
                   <label for="author">Author</label>
                   <br />
-                  <input type="text" name="author" id="author" />
+                  <input type="text" name="author" id="author" required />
                 </li>
                 <li>
                   <label for="pages">Number of pages</label>
                   <br />
-                  <input type="number" name="pages" id="pages" />
+                  <input type="number" name="pages" id="pages" required />
                 </li>
                 <li>
                   <label for="image">URL of image</label>
                   <br />
-                  <input type="url" name="image" id="image" />
+                  <input type="url" name="image" id="image" required />
                 </li>
                 <li>
                   <label for="read">Read it?</label>
